PMIeTron: Base Data Model and UI config Change

--- a/10-json/110-uiconfig/1106-entitytype/rock-entity-header_product_thing_uiConfig.json
+++ b/10-json/110-uiconfig/1106-entitytype/rock-entity-header_product_thing_uiConfig.json
@@ -34,7 +34,7 @@
                   "PMI_globalArticleCode": {
                     "attributeName": "PMI_globalArticleCode",
                     "noTrim": true,
-                    "visible": true
+                    "visible": false
                   },
                   "PMI_globalArticleName": {
                     "attributeName": "PMI_globalArticleName",
