--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,8 +8,8 @@ steps:
 
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: '$(Pipeline.Workspace)/files'  # Replace with the path to your folder in the repository
-    includeRootFolder: false
+    rootFolderOrFile: 'https://github.com/siddham10/PMIeTron/tree/main/10-json'  # Replace with the path to your folder in the repository
+    includeRootFolder: true
     archiveType: 'zip'
     archiveFile: '$(Pipeline.Workspace)/output/files.zip'
 
