--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ steps:
 
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: 'main/10-json'  # Replace with the path to your folder in the repository
+    rootFolderOrFile: '10-json'  # Replace with the path to your folder in the repository
     includeRootFolder: true
     archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/files.zip'
