Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,4 +9,4 @@ stages:
       startsWith(variables['Build.SourceBranch'], 'refs/heads/')
     
     jobs:
-      - template: azure-devops/jobs/deploy.yml
+      - template: jobs/deploy.yml
