Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,8 +25,8 @@ steps:
       -H 'x-rdp-version:8.1'\
       -H 'x-rdp-tenantId:etronds'\ 
       -H 'x-rdp-clientId:rdpclient'\
-      -H 'x-rdp-userId:etronds.systemadmin@riversand.com'\
-      -H 'x-rdp-userRoles:systemadmin'\
+      -H 'x-rdp-userId:etronds.admin@riversand.com'\
+      -H 'x-rdp-userRoles:admin'\
       -H 'auth-client-id:j29DTHa7m7VHucWbHg7VvYA75pUjBopS'\
       -H 'auth-client-secret:J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB'\
 
