--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,17 +19,10 @@ steps:
     artifactName: 'files'  # Replace with your desired artifact name
     publishLocation: 'pipeline'
 
-- script: |
-    curl -X POST \
-      -H 'Content-Type: application/zip' \
-      -H 'x-rdp-version:8.1'\
-      -H 'x-rdp-tenantId:etronds'\ 
-      -H 'x-rdp-clientId:rdpclient'\
-      -H 'x-rdp-userId:etronds.admin@riversand.com'\
-      -H 'x-rdp-userRoles:admin'\
-      -H 'auth-client-id:j29DTHa7m7VHucWbHg7VvYA75pUjBopS'\
-      -H 'auth-client-secret:J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB'\
-      --data-binary "@$(Build.ArtifactStagingDirectory)/files.zip" \
-      'https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload'
-  echo "File upload successful!"
-  displayName: Upload Files to Riversand
+- task: cURLUploader@2
+  inputs:
+    files: '$(Build.ArtifactStagingDirectory)/files.zip'
+    authType: ServiceEndpoint
+    url: 'https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload'
+    remotePath: 'upload/$(Build.BuildId)/'
+    options:     '--header "Content-Type: application/zip" --header "x-rdp-version: 8.1" --header "x-rdp-tenantId: etronds" --header "x-rdp-clientId: rdpclient" --header "x-rdp-userId: etronds.admin@riversand.com" --header "x-rdp-userRoles: admin" --header "auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS" --header "auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB"'
