--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,10 +19,37 @@ steps:
     artifactName: 'files'  # Replace with your desired artifact name
     publishLocation: 'pipeline'
 
-- task: cURLUploader@2
-  inputs:
-    files: '$(Build.ArtifactStagingDirectory)/files.zip'
-    authType: ServiceEndpoint
-    serviceEndpoint: 'eTronDS'
-    remotePath: 'upload/$(Build.BuildId)/'
-    options:     '--header "Content-Type: application/zip" --header "x-rdp-version: 8.1" --header "x-rdp-tenantId: etronds" --header "x-rdp-clientId: rdpclient" --header "x-rdp-userId: etronds.admin@riversand.com" --header "x-rdp-userRoles: admin" --header "auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS" --header "auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB"'
+- script: |
+    # Generate the authToken
+    currentTime=$(date -u +"%Y-%m-%dT%H:%M:%S")
+    request="POST /api/binarystreamobjectservice/prepareUpload"
+    clientId="rdpclient"  # Replace with your clientId
+    userId="etronds.admin@riversand.com"  # Replace with your userId
+    clientAuthKey="J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB"  # Replace with your clientAuthKey
+    signature=$(echo -n "$request&timeStamp=$currentTime" | openssl dgst -binary -sha256 -hmac "$clientAuthKey" | openssl base64 -e)
+    authToken="$clientId,$userId,$signature"
+    
+    # Make the API request to prepare the upload and extract the upload URL
+    prepareUploadResponse=$(curl -X POST \
+      -H "Content-Type: application/json" \
+      -H "Authorization: $authToken" \
+      -d '{}' \
+      'https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload')
+    
+    # Extract the upload URL from the response
+    uploadURL=$(echo "$prepareUploadResponse" | jq -r '.response.binaryStreamObjects[0].properties.uploadURL')
+
+    # Upload the files using cURL
+    curl -X PUT \
+      -H 'Content-Type: application/zip' \
+      -H 'x-rdp-version:8.1'\
+      -H 'x-rdp-tenantId:etronds'\ 
+      -H 'x-rdp-clientId:rdpclient'\
+      -H 'x-rdp-userId:etronds.admin@riversand.com'\
+      -H 'x-rdp-userRoles:admin'\
+      -H 'auth-client-id:j29DTHa7m7VHucWbHg7VvYA75pUjBopS'\
+      -H 'auth-client-secret:J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB'\
+      --data-binary "@$(Build.ArtifactStagingDirectory)/files.zip" \
+      "$uploadURL"
+      
+  displayName: Upload Files to Riversand
