--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,13 +22,13 @@ steps:
 - script: |
     curl -X POST \
       -H 'Content-Type: application/zip' \
-      -H '"x-rdp-version","8.1"'\
-      -H '"x-rdp-tenantId","etronds"'\ 
-      -H '"x-rdp-clientId","rdpclient"'\
-      -H '"x-rdp-userId","etronds.systemadmin@riversand.com"'\
-      -H '"x-rdp-userRoles","systemadmin"'\
-      -H '"auth-client-id","j29DTHa7m7VHucWbHg7VvYA75pUjBopS"'\
-      -H '"auth-client-secret","J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB"
+      -H 'x-rdp-version:8.1'\
+      -H 'x-rdp-tenantId:etronds'\ 
+      -H 'x-rdp-clientId:rdpclient'\
+      -H 'x-rdp-userId:etronds.systemadmin@riversand.com'\
+      -H 'x-rdp-userRoles:systemadmin'\
+      -H 'auth-client-id:j29DTHa7m7VHucWbHg7VvYA75pUjBopS'\
+      -H 'auth-client-secret:J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB'\
 
       --data-binary "@$(Build.ArtifactStagingDirectory)/files.zip" \
       https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload
