--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
       -H 'auth-client-id:j29DTHa7m7VHucWbHg7VvYA75pUjBopS'\
       -H 'auth-client-secret:J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB'\
 
-      --data-binary "@$(Build.ArtifactStagingDirectory)/files.zip" \
+      --'data-binary:@$(Build.ArtifactStagingDirectory)/files.zip' \
       https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload
   displayName: Upload Files to Riversand
 
