--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ steps:
 
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: '10-json'  # Replace with the path to your folder in the repository
+    rootFolderOrFile: '10-json/110-uiconfig/1106-entitytype/rock-entity-header_product_thing_uiConfig.json'  # Replace with the path to your folder in the repository
     includeRootFolder: true
     archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/files.zip'
@@ -29,9 +29,9 @@ steps:
       -H 'x-rdp-userRoles:systemadmin'\
       -H 'auth-client-id:j29DTHa7m7VHucWbHg7VvYA75pUjBopS'\
       -H 'auth-client-secret:J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB'\
-
-      --'data-binary:@$(Build.ArtifactStagingDirectory)/files.zip' \
-      https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload
-  displayName: Upload Files to Riversand
+      --data-binary "@$(Build.ArtifactStagingDirectory)/files.zip" \
+      'https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload'
+      echo "File upload successful!"
+      displayName: Upload Files to Riversand
 
 - # Add any additional tasks or steps you need
