Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
       -H 'x-rdp-userId:etronds.systemadmin@riversand.com'\
       -H 'x-rdp-userRoles:systemadmin'\
       -H 'auth-client-id:j29DTHa7m7VHucWbHg7VvYA75pUjBopS'\
-      -H 'auth-client-secret:J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB'\
+      -H 'auth-client-secret:J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB'
       --data-binary "@$(Build.ArtifactStagingDirectory)/files.zip" \
       https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload
       echo "File upload successful!"
