--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,3 +34,64 @@ steps:
       https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload
   displayName: Upload Files to Riversand
 
+- script: |
+    - script: |
+          jsonobject='{"binaryStreamObject":{"id":"guid","type":"seedDataStream","properties":{"objectKey":"'$ZIP_NODE'","originalFileName":"'$ZIP_NODE'"}}}'
+          
+          curl -X POST \
+            -H 'Content-Type: application/json' \
+            -H 'x-rdp-version: 8.1' \
+            -H 'x-rdp-tenantId:etronds' \
+            -H 'x-rdp-clientId: rdpclient' \
+            -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
+            -H 'x-rdp-userRoles: systemadmin' \
+            -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
+            -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
+            -d "$jsonobject" \
+            'https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload'
+          
+          # Capture the fileuploadUrl response and perform further operations
+          uploadURL=$(echo "$prepareUploadResponse" | jq -r '.response.binaryStreamObjects[0].properties.uploadURL')
+          # You may need to parse the response and extract the required information
+        displayName: 'Create Folder'
+
+  - stage: Deploying-folder
+    displayName: 'Deploying Folder'
+    steps:
+      - script: |
+          curl -v -X PUT "${uploadUrl}" \
+            --header "x-ms-meta-x_rdp_userroles: systemadmin" \
+            --header "x-ms-meta-x_rdp_tenantid: etronds" \
+            --header "x-ms-meta-originalfilename: $ZIP_NODE" \
+            --header "x-ms-blob-content-disposition: attachment; filename=$ZIP_NODE" \
+            --header "x-ms-meta-type: disposition" \
+            --header "x-ms-meta-x_rdp_clientid: j29DTHa7m7VHucWbHg7VvYA75pUjBopS" \
+            --header "x-ms-meta-x_rdp_userid: systemadmin@riversand.com" \
+            --header "x-ms-meta-binarystreamobjectid: guid" \
+            --header "x-ms-blob-type: BlockBlob" \
+            --header "Content-Type: application/zip" \
+            --data-binary "@$(Build.ArtifactStagingDirectory)/files.zip" \
+            "$uploadURL"
+        displayName: 'Deploy Folder'
+
+  - stage: Deployment-into-tenant
+    displayName: 'Deployment into Tenant'
+    steps:
+      - script: |
+          jsonobject='{"adminObject":{"id":"someguid","type":"adminObject","properties":{"flushConfig":false,"storageType":"stream","objectKey":"'$ZIP_NODE'","tenantId":"etronds","retryCount":1,"sleepTime":1000}}}'
+          
+          curl -X POST \
+            -H 'Content-Type: application/json' \
+            -H 'x-rdp-version: 8.1' \
+            -H 'x-rdp-tenantId:etronds' \
+            -H 'x-rdp-clientId: rdpclient' \
+            -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
+            -H 'x-rdp-userRoles: systemadmin' \
+            -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
+            -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
+            -d "$jsonobject" \
+            'https://etronds.riversand.com/api/adminservice/deploytenantseed'
+          
+          # Perform any further processing or validation as required
+        displayName: 'Deployment'
+
