Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -96,19 +96,18 @@ stages:
           vmImage: 'ubuntu-latest'
         steps:
           - script: |
-              jsonobject='{"adminObject":{"id":"someguid","type":"adminObject","properties":{"flushConfig":false,"storageType":"stream","objectKey":"$(ZIP_NODE)","tenantId":"etronds","retryCount":1,"sleepTime":1000}}}'
-              
-              curl -X POST \
-                -H 'Content-Type: application/json' \
-                -H 'x-rdp-version: 8.1' \
-                -H 'x-rdp-tenantId:etronds' \
-                -H 'x-rdp-clientId: rdpclient' \
-                -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
-                -H 'x-rdp-userRoles: systemadmin' \
-                -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
-                -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
-                -d "$jsonobject" \
-                'https://etronds.riversand.com/api/adminservice/deploytenantseed'
+             jsonobject='{"adminObject":{"id":"someguid","type":"adminObject","properties":{"flushConfig":false,"storageType":"stream","objectKey":"$(ZIP_NODE)","tenantId":"etronds","retryCount":1,"sleepTime":1000}}}'
+             deploymentResponse=$(curl -X POST \
+              -H 'Content-Type: application/json' \
+              -H 'x-rdp-version: 8.1' \
+              -H 'x-rdp-tenantId:etronds' \
+              -H 'x-rdp-clientId: rdpclient' \
+              -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
+              -H 'x-rdp-userRoles: systemadmin' \
+              -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
+              -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
+              -d "$jsonobject" \
+              'https://etronds.riversand.com/api/adminservice/deploytenantseed'
 
-              echo "Deployment completed successfully."
+             echo "$deploymentResponse"
             displayName: 'Deployment'
